# Advent-Of-Code

./: .gitignore
2019/d04a/: Cargo.toml
2019/d04b/: Cargo.toml
2019/d05b/: Cargo.toml
2019/d06a/: Cargo.toml
2019/d09/: Cargo.toml
2019/d12a/: Cargo.toml
2019/d13a/: Cargo.toml
2019/d13b/: Cargo.toml
2019/d15b/: Cargo.toml
2019/d16a/: Cargo.toml
2019/d17a/: Cargo.toml
2019/d19a/: Cargo.toml
2019/inputs/: d13.txt
2020/d01a/: Cargo.toml
2020/d02b/: Cargo.toml
2020/d03b/: Cargo.toml
2020/d04b/: Cargo.toml
2020/d05a/: Cargo.toml
2020/d06a/: Cargo.toml
2020/d07b/: Cargo.toml
2021/d06a/: Cargo.toml
2021/inputs/: d02.txt  d03.txt  d05.txt
2022/d07/: Cargo.toml  input.txt
2022/inputs/: d01.txt  d05.txt
Day 2/guessing-game/: Cargo.toml
Day 2/hello-rust/: Cargo.toml
d01b/src/: main.rs
d02b/: Cargo.toml
d03b/: Cargo.toml
d04a/src/: main.rs
d04b/src/: main.rs
d05a/src/: main.rs
d05b/src/: main.rs
d06a/src/: main.rs
d06b/src/: main.rs
d07a/src/: main.rs
d07b/: Cargo.toml
d08a/: Cargo.toml
d09/src/: main.rs
d10a/src/: main.rs
d10b/: Cargo.toml
d10b/src/: main.rs
d11a/: Cargo.toml
d11b/src/: intcode.rs  main.rs
d12b/: Cargo.toml
d12c/src/: main.rs
d13a/src/: intcode.rs
d13b/src/: main.rs
d14a/: Cargo.toml
d14a/src/: main.rs
d14b/: Cargo.toml
d14b/src/: main.rs
d15a/src/: dijkstra.rs  main.rs  read.rs
d16a/src/: main.rs
d16b/src/: main.rs  main2.rs
d17a/src/: grid.txt
d18a/: Cargo.toml
d18a/src/: dijkstra.rs  main.rs
day-10/src/: main.rs
day-2/src/: main.rs
(+68 files in other folders)
